<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/chevron_left"
        android:title="@string/action_previous"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/chevron_right"
        android:title="@string/action_next"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/refresh"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_this_month"
        android:icon="@drawable/calendar"
        android:title="@string/action_this_month"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

    <item android:id="@+id/action_about_donate"
        android:title="@string/action_about_donate"
        app:showAsAction="never"/>

</menu>