<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_chevron_left_black_48dp"
        android:title="@string/action_previous"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_chevron_right_black_48dp"
        android:title="@string/action_next"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_48dp"
        android:title="@string/action_refresh"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_this_year"
        android:icon="@drawable/ic_calendar_black_48dp"
        android:title="@string/action_this_year"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>