<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/fragment_system_name"/>

            <TextView
                android:id="@+id/system_name_text"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/system_name_button"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorButtonBackground"
                android:textSize="10sp"
                android:text="@string/fragment_system_location"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/colorRowDivider"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="1dp"/>

            <TextView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/fragment_system_panels"/>

            <TextView
                android:id="@+id/system_panels_text"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/system_panels_button"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorButtonBackground"
                android:textSize="10sp"
                android:text="@string/fragment_system_search"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/colorRowDivider"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="1dp"/>

            <TextView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/fragment_system_inverter"/>

            <TextView
                android:id="@+id/system_inverter_text"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/system_inverter_button"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorButtonBackground"
                android:textSize="10sp"
                android:text="@string/fragment_system_search"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:background="@color/colorRowDivider"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_height="1dp"/>

            <TextView
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:text="@string/fragment_system_statistics"/>

            <TextView
                android:id="@+id/system_statistics_text"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/system_statistics_button"
                android:layout_width="60dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorButtonBackground"
                android:textSize="10sp"
                android:text="@string/fragment_system_settings"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
