<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_sun" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/colorWhiteBackground"
        android:padding="10dp"
        android:text="@string/start_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <TextView
        android:id="@+id/label_system_id"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhiteBackground"
        android:padding="4dp"
        android:text="@string/preferences_title_pvoutput_system_id"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/label_api_key"
        app:layout_constraintEnd_toStartOf="@id/system_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

    <EditText
        android:id="@+id/system_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/api_key"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_system_id"
        app:layout_constraintTop_toBottomOf="@id/guideline"/>

    <TextView
        android:id="@+id/label_api_key"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/colorWhiteBackground"
        android:padding="4dp"
        android:text="@string/preferences_title_pvoutput_api_key"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toStartOf="@id/api_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_system_id"/>

    <EditText
        android:id="@+id/api_key"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/label_api_key"
        app:layout_constraintTop_toBottomOf="@id/system_id"/>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
