<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:padding="2dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:id="@+id/title" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:id="@+id/graph" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/column_time" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/column_power" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:paddingBottom="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textAlignment="textEnd"
            android:textStyle="bold"
            android:text="@string/column_energy" />

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/compare_disbalance_512" />
            <Button
                android:id="@+id/comparison_button"
                android:layout_width="46dp"
                android:layout_height="32dp"
                android:gravity="center_vertical|center_horizontal"
                android:textSize="8sp"
                android:textStyle="bold"
                android:text="@string/comparison_off" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="20dp"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table" />

    </ScrollView>

</LinearLayout>
